@@ -1,3 +1,7 @@
+
+2023-08-02 Franz Holzinger  <franz@ttproducts.de>
+    * remove constants DIV2007_EXT, DIV2007_LANGUAGE_SUBPATH and TSLIB_FETCE_EXT
+
 2023-03-02 Franz Holzinger  <franz@ttproducts.de>
     * Breaking no. #96287: use fetchAssociative instead of fetch
 
